dhall/tests/type-inference/failure/unit/RecordProjectionNotPresent.txt
Type error: error: ProjectionMissingEntry
 --> <current file>:1:1
  |
1 | { y = {=} }.{ x }
  | ^^^^^^^^^^^^^^^^^ ProjectionMissingEntry
  |
